refactor: 일급 컬렉션(Cars) 도입으로 코드 구조 개선